--- a/config/development.yaml
+++ b/config/development.yaml
@@ -43,8 +43,6 @@ workers:
   #   - BackgroundAsync - Workers operate asynchronously in the background, processing tasks with async capabilities.
   mode: BackgroundAsync
 
-  
-
 # Mailer Configuration.
 mailer:
   # SMTP mailer configuration.
@@ -73,7 +71,7 @@ mailer:
 # Database Configuration
 database:
   # Database connection URI
-  uri: {{ get_env(name="DATABASE_URL", default="postgres://loco:loco@localhost:5432/alumnimap_development") }}
+  uri: {{ get_env(name="DATABASE_URL", default="postgres://loco:loco@10.233.1.2:5432/alumnimap_dev") }}
   # When enabled, the sql query will be logged.
   enable_logging: false
   # Set the timeout duration when acquiring a connection.
