--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -28,7 +28,7 @@ env_logger = "0.11.8"
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4.50"
-web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
+web-sys = "0.3.70"
 
 [profile.release]
 opt-level = 2
