--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -13,13 +13,12 @@ egui = "0.31"
 eframe = { version = "0.31", default-features = false, features = [
     "default_fonts",
     "glow",
-    "persistence",
     "wayland",
     "x11",
 ] }
 log = "0.4.27"
-
-serde = { version = "1.0.219", features = ["derive"] }
+egui_extras = { version = "0.31.1", features = ["all_loaders"] }
+image = "0.25.6"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
