--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "alumnimap-frontend"
+name = "frontend"
 version = "0.1.0"
 authors = ["ckgxrg <ckgxrg@gmail.com>"]
 edition = "2021"
@@ -7,6 +7,9 @@ edition = "2021"
 [package.metadata.docs.rs]
 all-features = true
 targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
+
+[lints.clippy]
+pedantic = "warn"
 
 [dependencies]
 egui = "0.31"
