--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,3 +10,6 @@ pedantic = "warn"
 
 [dependencies]
 actix-web = "4"
+sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
+entity = { path = "../entity" }
+migration = { path = "../migration" }
