--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,3 +13,6 @@ actix-web = "4"
 sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
 entity = { path = "../entity" }
 migration = { path = "../migration" }
+serde = { version = "1.0.219" }
+serde_json = "1.0.140"
+clap = { version = "4.5.38", features = ["derive"] }
