--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,3 +16,4 @@ migration = { path = "../migration" }
 serde = { version = "1.0.219" }
 serde_json = "1.0.140"
 clap = { version = "4.5.38", features = ["derive"] }
+actix-files = "0.6.6"
