--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -22,6 +22,9 @@ eframe = { version = "0.31", default-features = false, features = [
 log = "0.4.27"
 egui_extras = { version = "0.31.1", features = ["all_loaders"] }
 image = "0.25.6"
+ehttp = { version = "0.5.0", features = ["json"] }
+serde_json = "1.0.140"
+entity = { path = "../entity" }
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
