--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,2 @@
-[alias]
-loco = "run --"
-loco-tool = "run --"
-
-playground = "run --example playground"
+[build]
+target = "wasm32-unknown-unknown"
