--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -21,3 +21,4 @@ serde = { version = "1.0.219" }
 serde_json = "1.0.140"
 clap = { version = "4.5.38", features = ["derive"] }
 actix-files = "0.6.6"
+include_dir = "0.7.4"
