--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -22,3 +22,4 @@ serde_json = "1.0.140"
 clap = { version = "4.5.38", features = ["derive"] }
 actix-files = "0.6.6"
 include_dir = "0.7.4"
+config = { version = "0.15.11", default-features = false, features = ["toml"] }
