Use crane to build

--- a/entity/Cargo.toml
+++ b/entity/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "entity"
-version = "0.1.0"
+version = "1.0.0"
+authors = ["ckgxrg <ckgxrg@gmail.com>"]
 edition = "2024"
 
 [dependencies]
