--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "migration"
-version = "0.1.0"
+version = "1.0.0"
+authors = ["ckgxrg <ckgxrg@gmail.com>"]
 edition = "2021"
-publish = false
 
 [lib]
 name = "migration"
