--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,11 @@
 [workspace]
 resolver = "3"
 members = ["frontend", "backend", "migration", "entity"]
+
+[workspace.package]
+version = "1.0.0"
+authors = ["ckgxrg <ckgxrg@gmail.com>"]
+publish = false
+
+[workspace.metadata.crane]
+name = "alumnimap"
